<resources>
    <string name="app_name">Tebusan Resep</string>
    <string name="skip_button_text">SKIP</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_in_button_text">Masuk</string>
    <string name="don_t_have_an_account_text">Belum punya akun?</string>
    <string name="sign_up_text">Daftar disini.</string>
    <string name="welcome_to_tebusan_resep_text">Welcome to Tebusan Resep</string>
    <string name="first_intro_detail_text">Aplikasi yang memudahkan anda dalam penebusan resep dokter.</string>
    <string name="tebusan_resep_text">Tebusan Resep</string>
    <string name="access_wherever_you_want_text">Access wherever you want.</string>
    <string name="third_intro_detail_text">Bisa diakses dimanapun dan kapanpun selama ada akses internet.</string>
    <string name="easy_to_use_text">Easy to use</string>
    <string name="second_intro_detail_text">Dilengkapi fitur yang mudah digunakan pengguna.</string>
    <string name="tanggal_lahir_hint">Umur</string>
    <string name="nama_lengkap_hint">Nama Lengkap</string>
    <string name="daftar_button_text">Daftar</string>
    <string name="sudah_punya_akun_text">Sudah punya akun?</string>
    <string name="masuk_disini_text">Masuk disini.</string>
    <string name="kode_pos_hint">Kode Pos</string>
    <string name="alamat_hint">Alamat</string>
    <string name="ketik_ulang_password_hint">Ketik Ulang Password</string>
    <string name="pria_radio_button_text">Pria</string>
    <string name="wanita_radio_button_text">Wanita</string>
    <string name="start_button_text">START</string>
    <string name="next_button_text">NEXT</string>
    <string name="title_activity_main_admin">Halaman Admin</string>
    <string name="pendaftaran_menu_text">Pendaftaran</string>
    <string name="pembayaran_menu_text">Pembayaran</string>
    <string name="resep_menu_text">Resep</string>
    <string name="detail_menu_text">Detail</string>
    <string name="obat_menu_text">Obat</string>
    <string name="poliklinik_menu_text">Poliklinik</string>
    <string name="pasien_menu_text">Pasien</string>
    <string name="dokter_menu_text">Dokter</string>
    <string name="daftar_antrian_hint">Daftar Antrian</string>
    <string name="tanggal_hint">Tanggal</string>
    <string name="nama_dokter_text">Nama dokter</string>
    <string name="nama_poliklinik_text">Nama poliklinik</string>
    <string name="username_text">Username</string>
    <string name="role_text">Role</string>
    <string name="update_button_text">Update</string>
    <string name="spesialis_hint">Spesialis</string>
    <string name="nomor_telepon_hint">Nomor Telepon</string>
    <string name="tarif_hint">Tarif</string>
    <string name="delete_text">Delete</string>
    <string name="user_text">User</string>
    <string name="title_activity_admin_antrian_list">AdminAntrianListActivity</string>
    <string name="tanggal_pendaftaran_hint">Tanggal Pendaftaran</string>
    <string name="keterangan_hint">Keterangan</string>
    <string name="nama_obat_hint">Nama Obat</string>
    <string name="harga_obat_hint">Harga Obat</string>
    <string name="add_obat_button_text">Tambah</string>
    <string name="add_poliklinik_button_text">Tambah</string>
    <string name="tanggal_resep_hint">Tanggal Resep</string>
    <string name="plus">+</string>
    <string name="jumlah_obat_gr_text">Jumlah Obat (/gr)</string>
    <string name="min">-</string>
    <string name="nol">0</string>
    <string name="add_detail">Add Detail</string>
    <string name="id_resep_hint">ID Resep</string>
    <string name="uang_bayar_hint">Uang Bayar</string>
    <string name="uang_kembalian_text">Uang Kembalian : Rp. </string>
    <string name="add_pembayaran_text">Add Pembayaran</string>

    <!-- strings for dialog -->
    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="print_text">Print</string>
    <string name="maaf_antrian_masih_kosong_text">Maaf Antrian Masih Kosong</string>
    <string name="antrian_masih_kosong_silahkan_mengantri_d_text">Antrian masih kosong, silahkan mengantri :D</string>
    <string name="resep_history_title">Resep History</string>
    <string name="register_user_text">Tambah User</string>
    <string name="tambah_button_text">Tambah</string>
    <string name="daftar_antrian_text">Daftar Antrian</string>
    <string name="tambah_obat_text">Tambah Obat</string>
    <string name="tambah_poliklinik_text">Tambah Poliklinik</string>
    <string name="daftar_pasien_text">Daftar Pasien</string>
    <string name="ubah_profil_text">Ubah Profil</string>
    <string name="ubah_button_text">Ubah</string>
    <string name="tambah_resep_text">Tambah Resep</string>
    <string name="tambah_text">Tambah</string>
    <string name="tambah_detail_resep_text">Tambah Detail Resep</string>
    <string name="tambah_pembayaran_text">Tambah Pembayaran</string>
    <string name="detail_resep_history_text">Detail Resep History</string>
    <string name="pembayaran_history_text">Pembayaran History</string>
    <string name="ubah_profil_pasien_text">Ubah Profil Pasien</string>
    <string name="ubah_profil_dokter_text">Ubah Profil Dokter</string>
    <string name="print_struk_text">Print Struk</string>
    <string name="id_struk_hint">ID Struk</string>
    <string name="tanggal_pembayaran_text">Tanggal Pembayaran</string>
    <string name="resep_text">Resep</string>
    <string name="dosis_obat_hint">Dosis Obat</string>
    <string name="harga_obat_gr_text">Harga Obat/gr</string>
    <string name="total_harga_hint">Total Harga</string>
    <string name="uang_kembalian_hint">Uang Kembalian</string>
    <string name="detail_struk_list_title">Detail Struk List</string>
    <string name="keluhan_hint">Keluhan</string>
    <string name="lihat_detail_text">Lihat Detail</string>
    <string name="list_text">List</string>
    <string name="bayar_text">Bayar</string>
    <string name="poli_text">Poli</string>
    <string name="antrian_text">Antrian</string>
    <string name="struk_text">Struk</string>
</resources>
