<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/jarak20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/jarak20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/slide_title"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/print_struk_text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/jarak_40sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_id_struk_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/id_struk_hint"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_tanggal_pembayaran_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/tanggal_pembayaran_text"
                        android:inputType="date" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_nama_lengkap_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/nama_lengkap_hint"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_nama_dokter_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/nama_dokter_text"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_nama_poliklinik_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/nama_poliklinik_text"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_keterangan_resep_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/resep_text"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_nama_obat_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/nama_obat_hint"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_dosis_obat_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/dosis_obat_hint"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_harga_obat_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/harga_obat_gr_text"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_total_harga_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/total_harga_hint"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_uang_bayar_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/uang_bayar_hint"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_uang_kembalian_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/jarak50dp"
                        android:layout_marginBottom="@dimen/jarak10dp"
                        android:hint="@string/uang_kembalian_hint"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/jarak10dp"
                    android:background="@drawable/ground_button_place"
                    android:onClick="createPdf"
                    android:text="@string/print_text"
                    android:textColor="@android:color/white"
                    android:textIsSelectable="true" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>