<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:scrollbars="none">

    <android.support.v7.widget.CardView
        android:id="@+id/cardregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/jarak20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/jarak20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/slide_title"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/tebusan_resep_text"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/jarak_40sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/jarak50dp"
                    android:layout_marginBottom="@dimen/jarak10dp"
                    android:hint="@string/username_text"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    tools:targetApi="o" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_password_user"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/jarak50dp"
                    android:layout_marginBottom="@dimen/jarak10dp"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_confirm_password_user"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/jarak50dp"
                    android:layout_marginBottom="@dimen/jarak10dp"
                    android:hint="@string/ketik_ulang_password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/jarak10dp"
                android:background="@drawable/ground_button_place"
                android:text="@string/daftar_button_text"
                android:textColor="@android:color/white"
                android:textIsSelectable="true" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/jarak60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/jarak20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/jarak5dp"
            android:text="@string/sudah_punya_akun_text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/direct_to_signin_page_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk_disini_text"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>